# suspension-insights

./: .gitignore  Dockerfile  README.md  gitignore  pyproject.toml
.github/workflows/: python-app.yml
suspension_insights/: calculator.py  cli.py  models.py  repository.py  service.py
suspension_insights/reports/: agent_collection_report.csv  days_from_suspension_report.csv  payment_type_report.csv
tests/: test_calculator.py  test_cli.py  test_models.py  test_repository.py  test_service.py
