[tool.poetry]
name = "suspension-insights"
version = "0.1.0"
description = ""
authors = ["liyabonasaki <liyabonasaki@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.3"
click = "^8.1.8"
pytest = "^8.3.4"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.1.0"
black = "^24.2.0"
flake8 = "^7.0.0"
mypy = "^1.10.0"
isort = "^5.13.2"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
